--- a/getStarted/src/blocks/modules/header/header.html
+++ b/getStarted/src/blocks/modules/header/header.html
@@ -49,3 +49,74 @@
         <div class="pr-4-dark-3"></div>
     </div>
 </div>
+<h1>Lorem ipsum dolor sit amet </h1>
+<h2>Lorem ipsum dolor sit amet </h2>
+<h3>Lorem ipsum dolor sit amet </h3>
+<h4>Lorem ipsum dolor sit amet </h4>
+<h5>Lorem ipsum dolor sit amet </h5>
+<h6>Lorem ipsum dolor sit amet </h6>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+<sub>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</sub>
+<!-- <ul>
+    <li>list1</li>
+    <li>list2</li>
+    <li>list3</li>
+</ul> -->
+<div class="container">
+    <form>
+        <div class="error-enter">
+            <input class"error-enter" type="text">
+        </div>
+    </form>
+</div>
+<div class="quotation">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus officiis commodi a quidem, quas cum sunt maxime temporibus fuga minus dolore perspiciatis ratione reprehenderit molestiae praesentium at impedit asperiores veritatis!
+</div>
+
+<div class="pagination">
+    <a href="#">&laquo;</a>
+    <a href="#">1</a>
+    <a href="#" class="active">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
+    <a href="#">5</a>
+    <a href="#">6</a>
+    <a href="#">7</a>
+    <a href="#">8</a>
+    <a href="#">9</a>
+    <a href="#">&raquo;</a>
+</div>
+
+<div class="button-dec">
+    <button class="button-1">
+    <button class="button-1">
+    <button class="button-1">
+    <button class="button-1">
+    <button class="button-1">
+    <button class="button-1">
+</div>
+<div class="social">
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-pinterest"></a>
+    <a href="#" class="fa fa-google-plus-g"></a>
+</div>
+<!-- <div class="container">
+    <form>
+        <input type="text" placeholder="">
+        <input type="button" value="">
+        <input type="color"
+        <input type="checkbox">
+        <input type="radio">
+        <input type="range">
+        <textarea></textarea>
+
+
+    </form>
+</div> -->
+
+<!-- <div class="container">
+    <form>
+        <input class="error-enter" type="text">
+    </form>
+</div> -->
